# corallab-lib

./: README.org  pixi.toml  pyproject.toml
corallab_lib/: __init__.py  backend_manager.py  entity.py  env.py  gym.py  pose.py  robot.py  robot_poses.py  task.py
corallab_lib/backends/: __init__.py  env_interface.py  gym_interface.py  motion_planning_problem_interface.py  robot_interface.py  task_interface.py
corallab_lib/backends/brax/: __init__.py  gym_impl.py
corallab_lib/backends/corallab/: __init__.py  implicit_graph.py  pebble_motion_problem_impl.py  roadmap.py
corallab_lib/backends/curobo/: __init__.py  dynamic_planning_problem_impl.py  env_impl.py  motion_planning_problem_impl.py  robot_impl.py  task_impl.py
corallab_lib/backends/drake/: __init__.py  robot_impl.py
corallab_lib/backends/gymnasium/: __init__.py  gym_impl.py
corallab_lib/backends/gymnasium_robotics/: __init__.py  gym_impl.py
corallab_lib/backends/mujoco/: __init__.py  gym_impl.py
corallab_lib/backends/multi_backend/: env_impl.py  robot_impl.py  task_impl.py
corallab_lib/backends/pybullet/: __init__.py  dynamic_planning_problem_impl.py  env_impl.py  gym_impl.py  motion_planning_problem_impl.py  robot_impl.py  (+1 more)
corallab_lib/problems/: __init__.py  dynamic_pebble_motion_problem.py  dynamic_planning_problem.py  inverse_kinematics_problem.py  motion_planning_problem.py  pebble_motion_problem.py
corallab_lib/stl/: __init__.py  expression.py  expression_extras.py  generator.py  stlcg_utils.py
corallab_lib/using_mujoco/: utils.py
corallab_lib/utilities/: blit_manager.py
corallab_lib/visualization/: __init__.py  utils.py  visualizer.py
corallab_sim/: __init__.py  backend_manager.py  env.py  robot.py  simulator.py  task.py
corallab_sim/backends/: __init__.py
corallab_sim/objects/: add.py
corallab_sim/ompl/: pb_ompl.py
corallab_sim/robots/: gripper.py  panda.py  robotiq_gripper.py  suction_gripper.py  ur5.py
corallab_sim/simulators/: mujoco_simulator.py
corallab_sim/using_pybullet/: simulator.py  utils.py
corallab_sim/utilities/: bullet.py  spatial.py
examples/: test.py  test_box_demo.py  test_multi_backend.py  test_reacher_env.py  test_real_ur5.py  test_ur5_env.py
examples/brax/: brax_test.py
examples/corallab/: test.py
examples/curobo/: test_task.py
examples/gymnasium/: test_gym.py
examples/gymnasium_robotics/: test_gym.py
examples/mujoco/: test_gym.py
examples/pybullet/: test_gym.py  test_task.py
examples/stl/: stl_example.py
examples/torch_robotics/: test_gym.py  test_task.py
local/: pytorch_mapping.json
(+127 files in other folders)
