[tool.poetry]
name = "corallab-lib"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.org"
packages = [{include = "corallab_lib"}]


[tool.poetry.dependencies]
python = ">=3.9,<4"
jaxtyping = "^0.2.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
